--- a/project2/app/src/main/AndroidManifest.xml
+++ b/project2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--여기는 주석을 이렇게 해야함. 안드로이드 앱에서 인터넷에 접속할 수 있도록 허용할려면 이것을 추가해야함.-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
